--- a/src/main/resources/templates/candidates.html
+++ b/src/main/resources/templates/candidates.html
@@ -34,6 +34,7 @@
                 <a class="nav-item nav-link" th:href="@{/posts}">Вакансии</a>
                 <a class="nav-item nav-link" th:href="@{/formAddPost}">Добавить вакансию</a>
                 <a class="nav-item nav-link active" href="#">Кандидаты <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" th:href="@{/formAddPost}">Добавить кандидата</a>
             </div>
         </div>
     </nav>
