--- a/src/main/resources/templates/addPost.html
+++ b/src/main/resources/templates/addPost.html
@@ -35,7 +35,7 @@
                 <a class="nav-item nav-link active" href="#">Добавить вакансию <span
                         class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
-                <a class="nav-item nav-link" th:href="@{/formAddPost}">Добавить кандидата</a>
+                <a class="nav-item nav-link" th:href="@{/formAddCandidate}">Добавить кандидата</a>
             </div>
         </div>
     </nav>
@@ -48,6 +48,11 @@
                 <form>
                     <div class="form-group">
                         <label>Имя
+                            <input type="text" class="form-control">
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label>Описание
                             <input type="text" class="form-control">
                         </label>
                     </div>
