--- a/src/main/resources/templates/addPost.html
+++ b/src/main/resources/templates/addPost.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="form-group">
                         <label>Описание
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" name="description" id="description">
                         </label>
                     </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
