--- a/src/main/resources/templates/candidates.html
+++ b/src/main/resources/templates/candidates.html
@@ -44,6 +44,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Имя</th>
                 <th scope="col">Описание</th>
+                <th scope="col">Город</th>
                 <th scope="col">Дата создания</th>
             </tr>
             </thead>
@@ -55,8 +56,15 @@
                         <i class="fa fa-edit"></i>
                     </a>
                     <span th:text="${candidate.name}"></span>
+                    <span th:if="${candidate.visible}">
+                        <i class="fa fa-check-square-o"></i>
+                    </span>
+                    <span th:if="${!candidate.visible}">
+                        <i class="fa fa-square-o"></i>
+                    </span>
 
                 </td>
+                <td th:text="${candidate.city}"></td>
                 <td th:text="${candidate.desc}"></td>
                 <td th:text="${candidate.date}"></td>
             </tr>
