--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -44,6 +44,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Имя</th>
                 <th scope="col">Описание</th>
+                <th scope="col">Город</th>
                 <th scope="col">Дата создания</th>
             </tr>
             </thead>
@@ -63,6 +64,7 @@
                     </span>
 
                 </td>
+                <td th:text="${post.city}"></td>
                 <td th:text="${post.description}"></td>
                 <td th:text="${post.date}"></td>
             </tr>
