--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -43,8 +43,8 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Имя</th>
-                <th scope="col">Описание</th>
                 <th scope="col">Город</th>
+                <th scope="col">Описание</th>
                 <th scope="col">Дата создания</th>
             </tr>
             </thead>
@@ -62,9 +62,8 @@
                     <span th:if="${!post.visible}">
                     <i class="fa fa-square-o"></i>
                     </span>
-
                 </td>
-                <td th:text="${post.city}"></td>
+                <td th:text="${post.city.name}"></td>
                 <td th:text="${post.description}"></td>
                 <td th:text="${post.date}"></td>
             </tr>
