--- a/src/main/resources/templates/candidates.html
+++ b/src/main/resources/templates/candidates.html
@@ -43,8 +43,8 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Имя</th>
-                <th scope="col">Описание</th>
                 <th scope="col">Город</th>
+                <th scope="col">Описание</th>
                 <th scope="col">Дата создания</th>
             </tr>
             </thead>
@@ -64,7 +64,7 @@
                     </span>
 
                 </td>
-                <td th:text="${candidate.city}"></td>
+                <td th:text="${candidate.city.name}"></td>
                 <td th:text="${candidate.desc}"></td>
                 <td th:text="${candidate.date}"></td>
             </tr>
