--- a/src/main/resources/templates/updatePost.html
+++ b/src/main/resources/templates/updatePost.html
@@ -51,6 +51,13 @@
                         <input type="text" class="form-control" name="description" id="description"
                                th:field="*{description}">
                     </div>
+                    <div class="form-group">
+                        <label for="city.id">Город</label>
+                        <select class="form-control" id="city.id" name="city.id">
+                            <option th:each="c : ${cities}" th:value="${c.id}"
+                                    th:text="${c.name}" th:selected="${c.id == post.city.id}"></option>
+                        </select>
+                    </div>
                     <div class="form-check">
                         <input type="checkbox" name="visible" class="form-check-input" id="visible">
                         <label class="form-check-label" for="visible">Опубликовать</label>
