--- a/src/main/resources/templates/candidates.html
+++ b/src/main/resources/templates/candidates.html
@@ -64,6 +64,10 @@
                     </span>
 
                 </td>
+                <td>
+                    <img th:width="150" th:high="150" th:src="@{|/photoCandidate/${candidate.id}|}">
+                    <span th:text="${candidate.name}"></span>
+                </td>
                 <td th:text="${candidate.city.name}"></td>
                 <td th:text="${candidate.desc}"></td>
                 <td th:text="${candidate.date}"></td>
