--- a/src/main/resources/templates/updateCandidate.html
+++ b/src/main/resources/templates/updateCandidate.html
@@ -43,7 +43,8 @@
                 Редактирование данных кандидата.
             </div>
             <div class="card-body">
-                <form th:action="@{/updateCandidate}" method="POST" th:object="${candidate}">
+                <form th:action="@{/updateCandidate}" method="POST" th:object="${candidate}"
+                      enctype="multipart/form-data">
                     <input type="hidden" name="id" th:field="*{id}"/>
                     <div class="form-group">
                         <label for="name">Имя</label>
@@ -57,6 +58,10 @@
                             <option th:each="c : ${cities}" th:value="${c.id}"
                                     th:text="${c.name}" th:selected="${c.id == candidate.city.id}"></option>
                         </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="name">Фотография</label>
+                        <input type="file" class="form-control" name="file" id="file">
                     </div>
                     <div class="form-check">
                         <input type="checkbox" name="visible" class="form-check-input" id="visible">
