3. Тестирование базы данных. Liquibase H2 [#504862]

--- a/src/main/resources/templates/candidates.html
+++ b/src/main/resources/templates/candidates.html
@@ -69,8 +69,8 @@
                     <span th:text="${candidate.name}"></span>
                 </td>
                 <td th:text="${candidate.city.name}"></td>
-                <td th:text="${candidate.desc}"></td>
-                <td th:text="${candidate.date}"></td>
+                <td th:text="${candidate.description}"></td>
+                <td th:text="${candidate.description}"></td>
             </tr>
             </tbody>
         </table>
