--- a/src/main/resources/templates/addCandidate.html
+++ b/src/main/resources/templates/addCandidate.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="form-group">
                         <label>Описание
-                            <input type="text" class="form-control" name="desc" id="desc">
+                            <input type="text" class="form-control" name="description" id="description">
                         </label>
                     </div>
                     <div class="form-group">
