--- a/src/main/resources/templates/updateCandidate.html
+++ b/src/main/resources/templates/updateCandidate.html
@@ -49,8 +49,8 @@
                     <div class="form-group">
                         <label for="name">Имя</label>
                         <input type="text" class="form-control" name="name" id="name" th:field="*{name}">
-                        <input type="text" class="form-control" name="desc" id="desc"
-                               th:field="*{desc}">
+                        <input type="text" class="form-control" name="description" id="description"
+                               th:field="*{description}">
                     </div>
                     <div class="form-group">
                         <label for="city.id">Город</label>
