--- a/src/main/resources/templates/addCandidate.html
+++ b/src/main/resources/templates/addCandidate.html
@@ -33,6 +33,7 @@
                 <a class="nav-item nav-link" th:href="@{/index}">Главная</a>
                 <a class="nav-item nav-link" th:href="@{/posts}">Вакансии</a>
                 <a class="nav-item nav-link" th:href="@{/formAddPost}">Добавить вакансию</a>
+                <a class="nav-item nav-link" th:href="@{/formAddUser}">Добавить пользователя</a>
                 <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
                 <a class="nav-item nav-link active" href="#">Добавить кандидата <span
                         class="sr-only">(current)</span></a>
