--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -32,8 +32,8 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="#">Главная</a>
                 <a class="nav-item nav-link" th:href="@{/posts}">Вакансии</a>
-                <a class="nav-item nav-link active" th:href="@{/formAddPost}">Добавить вакансию</a>
-                <a class="nav-item nav-link" th:href="@{/formAddUser}">Добавить пользователя</a>
+                <a class="nav-item nav-link" th:href="@{/formAddPost}">Добавить вакансию</a>
+                <a class="nav-item nav-link active" th:href="@{/formAddUser}">Добавить пользователя</a>
                 <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
                 <a class="nav-item nav-link" th:href="@{/formAddCandidate}">Добавить кандидата</a>
             </div>
@@ -42,29 +42,23 @@
     <div class="row pt-3">
         <div class="card" style="width: 100%">
             <div class="card-header">
-                Новая вакансия.
+                Новый пользователь.
             </div>
             <div class="card-body">
-                <form th:action="@{/createPost}" method="POST">
+                <form th:action="@{/registration}" method="POST">
                     <input type="hidden" name="id" value="0"/>
                     <div class="form-group">
-                        <label for="name">Имя</label>
-                        <input type="text" class="form-control" name="name" id="name">
+                        <label for="email">E-mail</label>
+                        <input type="text" class="form-control" name="email" id="email">
                     </div>
                     <div class="form-group">
-                        <label>Описание
-                            <input type="text" class="form-control" name="description" id="description">
+                        <label>Пароль
+                            <input type="text" class="form-control" name="password" id="password">
                         </label>
                     </div>
                     <div class="form-check">
                         <input type="checkbox" name="visible" class="form-check-input" id="visible">
                         <label class="form-check-label" for="visible">Опубликовать</label>
-                    </div>
-                    <div class="form-group">
-                        <label for="city.id">Город</label>
-                        <select class="form-control" id="city.id" name="city.id">
-                            <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}"></option>
-                        </select>
                     </div>
 
                     <button type="submit" class="btn btn-primary">Сохранить</button>
