--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -30,6 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" th:href="@{/index}">Главная</a>
+                <a class="nav-item nav-link" th:href="@{/loginPage}">Войти</a>
                 <a class="nav-item nav-link active" href="#">Вакансии <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" th:href="@{/formAddPost}">Добавить вакансию</a>
                 <a class="nav-item nav-link" th:href="@{/formAddUser}">Добавить пользователя</a>
