--- a/src/main/resources/templates/vacancies/list.html
+++ b/src/main/resources/templates/vacancies/list.html
@@ -33,7 +33,7 @@
                 <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Имя</th>
+                    <th scope="col">Название</th>
 <!--                    <th scope="col">Описание</th>-->
                     <th scope="col">Дата создания</th>
                 </tr>
@@ -41,7 +41,8 @@
                 <tbody>
                 <tr th:each="vacancy: ${vacancies}">
                     <td th:text="${vacancy.id}" />
-                    <td th:text="${vacancy.title}" />
+<!--                    <td th:text="${vacancy.title}" />-->
+                    <td><a th:text="${vacancy.title}" th:href="@{/vacancies/{vacancyId}(vacancyId=${vacancy.id})}"></a></td>
 <!--                    <td th:text="${vacancy.description}"/>-->
                     <td th:text="${vacancy.creationDate}"/>
                 </tr>
